# mcpx

./: LICENSE  README.md  pyproject.toml  test_server.py
src/mcpx/: __init__.py  agent.py  bridge.py  cache.py  cli.py  config.py  installer.py  schema.py
